Remove crown logo on mobile fixed header

--- a/wp-content/themes/jaipurgems/assets/css/style.css
+++ b/wp-content/themes/jaipurgems/assets/css/style.css
@@ -5196,7 +5196,9 @@ footer {
 							display: none;
 						}
 
-
+	.fixed-logo.active {
+		display: none;
+	}
 
 	.related .products > .container > .row,
 	.additional-items .products > .container > .row {
